// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query searchPostSuggestions should return search suggestions 1`] = `
Object {
  "searchPostSuggestions": Object {
    "hits": Array [],
    "query": "p1",
  },
}
`;

exports[`query searchPosts should return search empty feed 1`] = `
Object {
  "searchPosts": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "query": "not found",
  },
}
`;

exports[`query searchPosts should return search feed 1`] = `
Object {
  "searchPosts": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "query": "p1",
  },
}
`;
